# SimpleSimulationEngine

./: .gitignore  AGENTS.md  AGENTS_long.md  DOX_AGENTS.md  LICENCE.md  OKF_SPEC.md  README.md  RayTracing.md  classify_md.py  clean  run_web_server.sh  server.py  setup_agent_links.sh
cpp/: CMakeLists.txt  CMakeLists.txt-noocl  CMakeLists.txt-ocl  test
cpp/Builds/OCL/: CMakeLists.txt
cpp/Builds/all/: CMakeLists.txt
cpp/Builds/apps/: CMakeLists.txt
cpp/Builds/libs/: CMakeLists.txt
cpp/Builds/libs_SDL/: CMakeLists.txt
cpp/Builds/sketches_OCL/: CMakeLists.txt
cpp/Builds/sketches_SDL/: CMakeLists.txt
cpp/Builds/tests/: CMakeLists.txt
cpp/Notes/: NeuralNetworkPotentialOpenCl.txt  OGL3_ToDo.md  ToDo.md
cpp/apps/: CMakeLists.txt  README.md
cpp/apps/AeroCombat/: AeroCombatHelpers.h  AeroCombatOGL3.cpp  AeroCombat_main.cpp  AeroControler1.h  AeroCraftDesign.h  AeroCraftGUI.cpp  AeroCraftGUI.h  AeroCraftWarrior.h  AeroCraftWorld.h  AeroCraft_editor.cpp  AeroCraft_editor2.cpp  AeroDraw.h  AeroTest.h  CMakeLists.txt  FieldPatch.cpp  README.md  editor.cpp  main.cpp
cpp/apps/AeroCraft/: AeroCraft.cpp  AeroCraft.h  AeroCraftGUI.cpp  AeroCraftGUI.h  AeroCraftWorld.cpp  AeroCraftWorld.h  CMakeLists.txt  FieldPatch.cpp  FieldPatch.h  GameScreen.cpp  GameScreen.h  GameWorld.cpp  GameWorld.h  main.cpp
cpp/apps/BlockHouseTactics/: BlockHouseTactics_main.cpp  BlockHouseWorld.cpp  BlockHouseWorld.h  CMakeLists.txt  FormationWorld.h  README.md  main.cpp
cpp/apps/BuildAndFight/: CMakeLists.txt
cpp/apps/BuildAndFight_Ship2D/: SDLapp.cpp  makefile
cpp/apps/CAD/: CAD2D.h  CMakeLists.txt  README.md  cad2d.cpp
cpp/apps/CastleBuilder/: CMakeLists.txt  CastleBuilder_main.cpp  CastleWorld.cpp  CastleWorld.h  README.md  main.cpp
cpp/apps/DemoCrat/: CMakeLists.txt  Demo.h  DemoCrat_main.cpp  README.md
cpp/apps/FormationTactics/: BattleLine.cpp  BattleLine.h  CMakeLists.txt  Faction.h  Formation.cpp  Formation.h  FormationTacticsCommon.h  FormationTactics_main.cpp  FormationWorld.cpp  FormationWorld.h  PolyLineFormation.h  README.md  Soldier.cpp  Soldier.h  SoldierType.cpp  SoldierType.h  main.cpp
cpp/apps/LandCraft/: CMakeLists.txt  Economy.h  LandCraftLua.h  LandCraftWorld.cpp  LandCraftWorld.h  LandCraft_main.cpp  LandCraft_main_bak.cpp  README.md  Roads.h  hydraulics1D.h  main.cpp
cpp/apps/LandTactics/: CMakeLists.txt  LTFaction.cpp  LTFaction.h  LTShelter.h  LTSquad.cpp  LTSquad.h  LTSurroundings.cpp  LTSurroundings.h  LTUnit.cpp  LTUnit.h  LTUnitType.cpp  LTUnitType.h  LTWorld.cpp  LTWorld.h  LTcommon.h  LTdraw.h  LTrender.h  LandTactics_main.cpp  README.md  main.cpp
cpp/apps/MeshViewer/: CMakeLists.txt  MeshFileFormats.h  MeshViewer.h  README.md  meshViewer_main.cpp  test_svg_export.cpp
cpp/apps/MinimalTactics/: CMakeLists.txt  Faction.cpp  Faction.h  MinimalTacticsCommon.h  MinimalTactics_main.cpp  README.md  TacWorld.cpp  TacWorld.h  Unit.cpp  Unit.h  UnitType.cpp  UnitType.h  main.cpp
cpp/apps/MolecularEditor/: AtomTypes.cpp  AtomTypes.h  CMakeLists.txt  ConfSearch.cpp  MolecularDraw.h  MolecularEditor_main.cpp  MolecularWorld.cpp  MolecularWorld.h  MoleculeType.cpp  MoleculeType.h  README.md  forceField.h  molecularGUI.cpp  test_CLCFGO_OGL3.cpp
cpp/apps/MolecularEditor2/: CMakeLists.txt  ConfSearch.cpp  MolecularDraw.h  MolecularEditor2_main.cpp  MolecularWorl2.h  molecularEditor2.cpp  test_MMFF.cpp
cpp/apps/MultiFight3D/: CMakeLists.txt  MultiFight3DWorld.cpp  MultiFight3DWorld.h  MultiFight3D_main.cpp  MultiFight3D_single.cpp  Projectile3D.h  README.md  Warrior3D.cpp  Warrior3D.h
cpp/apps/MusicVizualizer/: CMakeLists.txt  MusicRendererOGL3.h  MusicUtils.h  MusicVisualizer_main.cpp  README.md
cpp/apps/NBodyWorld/: NBodyWorld2D.cpp  NBodyWorld2D.h  main.cpp
cpp/apps/NavalBattle/: Battleship.cpp  Battleship.h  CMakeLists.txt  NavalBattle_main.cpp  NavalBattle_single.cpp  README.md
cpp/apps/NonInertial/: CMakeLists.txt  NonInertWorld.cpp  NonInertWorld.h  NonInert_seats.cpp  Projectile2D.cpp  Projectile2D.h  README.md  Warrior2D.cpp  Warrior2D.h
cpp/apps/OrbitalWar/: Asteroid.h  CMakeLists.txt  EditSpaceCraft.h  README.md  RublePile.h  SolarSystemMap.cpp  SpaceBodies.h  SpaceCraft.h  SpaceCraftDraw.h  SpaceCraftDynamicsApp.h  SpaceCraftEditorNew.cpp  SpaceDraw.h  SpaceLaunchODE.h  SpaceWorld.h  TrajectoryVariation.h  asteroidEngineering.h  consrain_solver_testing.txt  constructionBlockApp.cpp  orbitEditor.cpp  spaceCombat.h  spaceCraftDynamics.cpp  spaceCraftDynamicsOCL.cpp  spaceCraftDynamicsOCL_bak.cpp  spaceCraftDynamicsShared.h  spaceCraftDynamics_bak.cpp  spaceCraftEditor.cpp  spaceCraftEditorUtils.h  spaceTactics.cpp  (+6 more)
cpp/apps_OCL/: CMakeLists.txt
cpp/cmake_utils/: FindOpenGLES2.cmake
cpp/common/: CMakeLists.txt  IO_utils.h  SDL_utils.h  globals.h  testUtils.h
cpp/common_SDL/: CMakeLists.txt  GLUtils.h  SDL_utils.h
cpp/common_resources/: EndGroup_X_1-noH.xyz  EndGroup_X_1.mol  EndGroup_X_1.xyz  EndGroup_Y_1-noH.xyz  EndGroup_Y_1.mol  EndGroup_Y_1.xyz  polymer-2-monomer.xyz  polymer-2.lvs  polymer-2.xyz  polymer-R.mol  polymer-R.xyz  polymer-noH.xyz  polymer.lvs  polymer.xyz  precursor_CN.mol  precursor_OH.mol  propylacid-q.mol  propylacid.mol
cpp/engines/: CMakeLists.txt  Collisions.cpp  Collisions.h  Object3D.h  Ship2D.h  Shooter.cpp  Shooter.h  Terrain25D.h  Warrior25D.h  Warrior3D.h
cpp/libs/: CMakeLists.txt  README.md
cpp/libs_OCL/: CMakeLists.txt  SpaceCombatOCL_lib.cpp  SpaceCraftingOCL_lib.cpp
cpp/libs_SDL/: CMakeLists.txt
cpp/sketches/: CMakeLists.txt
cpp/sketches_GLView/: combatModel_SimpleBattleLine.cpp  combatModel_minimalDivisionLevel.cpp  fast_atan2.cpp  fast_erfx.cpp  intercept.cpp  invSphereMap.cpp  solids_script.cpp  test.cpp  test.sh
cpp/sketches_OCL/: CMakeLists.txt  MySimulationCodes.md  NOTES.md  ToDo.md
cpp/sketches_SDL/: CMakeLists.txt  README.md
cpp/tests/: CMakeLists.txt
cppEngineConcept/: CMakeLists.txt  testUtils.h
cppEngineConcept/engine/: Bodies.h
cppEngineConcept/math/: CMakeLists.txt  Mat3.h  Vec3.h  fastmath.h  quaternion.h
cppEngineConcept/tests/: CMakeLists.txt  test_Basics.cpp
(+2341 files in other folders)
