find_package( OpenGL REQUIRED )
find_package( GLU    REQUIRED )
find_package( SDL2   REQUIRED )

add_subdirectory (SailWar)
add_subdirectory (SailWar_Multi)
add_subdirectory (AeroCraft)
add_subdirectory (FormationTactics)
add_subdirectory (MinimalTactics)
add_subdirectory (LandTactics)
add_subdirectory (NonInertial)
add_subdirectory (MultiFight3D)
add_subdirectory (BlockHouseTactics)
add_subdirectory (CastleBuilder)
add_subdirectory (OrbitalWar)
add_subdirectory (Tanks)
add_subdirectory (NavalBattle)

add_subdirectory (MolecularEditor)


