add_subdirectory (algorithms)
add_subdirectory (math)
add_subdirectory (dynamics)
add_subdirectory (molecular)
add_subdirectory (maps)
add_subdirectory (dataStructures)
add_subdirectory (engine)
add_subdirectory (CombatModels)
#add_subdirectory (SDL2OGL)
#add_subdirectory (SDL2OGL3)
#add_subdirectory (network)
#add_subdirectory (engines)
